# FFMPEG

./: readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ffmpeg/jesson/com/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/ffmpeg/jesson/com/ffmpeg/: FFmpegPlayer.java  MainActivity.java  PlayerView.java
app/src/main/jni/ffmpeg/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/ffmpeg/jesson/com/ffmpeg/: ExampleUnitTest.java
